@@ -6,14 +6,13 @@
   <? endif; ?>
   <div class="turba-duplicate-forms">
     <? if (!$this->first): ?>
-    <form action="<?= $this->contactUrl ?>">
+    <form action="<?= $this->mergeUrl ?>">
       <input type="hidden" name="source" value="<?= $this->source ?>" />
       <input type="hidden" name="key" value="<?= $this->h($this->id) ?>" />
       <input type="hidden" name="url" value="<?= Horde::selfUrl(true) ?>" />
       <input type="hidden" name="merge_into" value="<?= $this->h($this->mergeTarget) ?>" />
-      <input type="hidden" name="actionID" value="merge" />
       <input type="submit" class="button" value="<?= _("<< Merge this into the first contact") ?>" />
-                                                           </form>
+    </form>
     <? endif; ?>
     <form action="<?= $this->contactUrl ?>">
       <input type="hidden" name="source" value="<?= $this->source ?>" />
